Picture-in-Picture: do not reset window size and position when SurfaceId changes.

In other words, while the window is visible, it will keep its size and
position and only resize to match the aspect ratio of the video.

Bug: 855059
Change-Id: I4dbe57653670883b046ef7ee2994d7574764827d
Reviewed-on: https://chromium-review.googlesource.com/1126559
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: François Beaufort <beaufort.francois@gmail.com>
Cr-Commit-Position: refs/heads/master@{#572804}
Former-commit-id: 40dc0c129cc346e06e9a282c97adad104ade45e1